# onkar-kalyadi-genAcademy

./: README.md
healthcare-data-pipeline/: .env.example  .gitignore  README.md  docker-compose.yml
healthcare-data-pipeline/etl/: export_for_tableau.py  load_to_postgres.py  transform.py
healthcare-data-pipeline/sql/: business_metrics.sql
stock-analyst-agent/: .gitignore  README.md  app.py  pyproject.toml
stock-analyst-agent/components/: __init__.py  ai_chat_tab.py  data_upload_tab.py  historical_performance_tab.py  portfolio_view_tab.py
stock-analyst-agent/sample_data/: etrade_sample.csv  stocks.csv
stock-analyst-agent/utils/: __init__.py  broker_import.py  data_processing.py  llm_agent.py  portfolio_math.py
